Revision history for {{$dist->name}}

{{$NEXT}}
  - Update to the libuv v1.20.0 release

0.017     2018-03-29
  - Update to the libuv v1.19.2 release

0.016     2018-01-29
  - Update to the libuv v1.19.1 release

0.015     2018-01-11
  - Update to the libuv v1.18.0 release

0.014     2017-11-27
  - Update to the libuv v1.17.0 release

0.013     2017-11-12
  - Update to the libuv v1.16.1 release

0.012     2017-10-03
  - Update to the libuv v1.15.0 release
  - Support for NetBSD

0.011     2017-09-06
  - Only require Alien::Autotools for a non-windows source build (Graham Ollis)
  - Update to the libuv v1.14.1 release.

0.010     2017-08-24
  - Production release with the changes from the three previous trial releases

0.009     2017-08-17 (TRIAL)
  - Re-release to fix the bsd-tar headers in the tarball

0.008     2017-08-17 (TRIAL)
  - Ensure the download URL for libuv is now over https as that's now default
  - Bump libuv version to 1.14.0

0.007     2017-08-15 (TRIAL)
  - Depend on Alien::Autotools now
  - Cleanup the build on Windows a bit (hopefully speed up this process)
  - Only require Alien::MSYS on Windows

0.006     2017-07-10
  - Bump the share version to libuv v1.13.1
  - Add a recommended test install of FFI::Platypus
  - Diag out the install_type for better debugging later

0.005     2017-07-08
  - Updated the requirements to include Alien::m4
  - Update requirements of Alien::libtool, automake, and autoconf for some
    corrections

0.004     2017-06-29
  - Ensure we're at least using libuv v1.0.0. Prior versions of libuv handled
    errors differently, causing problems for XS modules needing to deal with
    both.

0.003     2017-06-27
  - Bump prereqs for Alien:: tools
  - Isolate dynamic libraries (Graham Ollis)

0.002     2017-06-26
  - Use Alien::libtool (Graham Ollis)
  - Use Alien::autoconf (Graham Ollis)
  - Use Alien::automake (Graham Ollis)
  - Fix install on BSD, OS X, and Windows (Graham Ollis)

0.001     2017-06-16
  - initial version