@@ -3,7 +3,7 @@ author           = Chase Whitener <capoeirab@cpan.org>
 license          = Perl_5
 copyright_holder = Chase Whitener
 copyright_year   = 2017
-version          = 0.018
+version          = 1.000
 
 [Git::GatherDir]
 exclude_filename = Makefile.PL
